--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" href="/static/default.css">
+    <link rel="stylesheet" href="/css/default.css">
 
 </head>
 
@@ -10,8 +10,8 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/projects">Projects</a></li>
-            <li><a class="active" href="{% url 'blog' %}">Blog</a></li>
-            <li style="float:right; padding-right: 5px;" ><a href="contact">Contact</a></li>
+            <li><a class="active" href="/blog">Blog</a></li>
+            <li style="float:right; padding-right: 5px;" ><a href="/contact">Contact</a></li>
 
         </ul>
 
