--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
 <head>
 
     <!--using default style sheet-->
-    <link rel="stylesheet" href="/static/default.css">
+    <link rel="stylesheet" href="/css/default.css">
 
     <!--<style> contains style specs-->
     <style>
@@ -26,9 +26,9 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a class="active" href="/projects">Portfolio</a></li>
-            <li><a href="{% url 'blog' %}">Blog</a></li>
+            <li><a href="/blog">Blog</a></li>
             <li><a href="/gallery">Gallery</a></li>
-            <li style="float:right;" ><a href="contact">Contact</a></li>
+            <li style="float:right;" ><a href="/contact">Contact</a></li>
 
         </ul>
 
