--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
 
     <!--Squid Battle-->
     <div class="project">
-        <img src="{% img 'squidimage.png' %}" alt="Squid Battle screenshot">
+        <img src="/img/squidimage.png" alt="Squid Battle screenshot">
 
 
         <h3 style="margin-bottom: 0;">
@@ -70,7 +70,7 @@
 
 
     <div class="project">
-        <img src="{% img 'picogame.png' %}" alt="PICO-8 Engine Screenshot">
+        <img src="/img/picogame.png" alt="PICO-8 Engine Screenshot">
 
         <h3 style="margin-bottom: 0;">
             PICO-8 Game Engine Development
