new squid image

--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
 
     <!--Squid Battle-->
     <div class="project">
-        <img src="/img/squidimage.png" alt="Squid Battle screenshot">
+        <img src="/img/squidbattle.png" alt="Squid Battle screenshot">
 
 
         <h3 style="margin-bottom: 0;">
