--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,6 @@
 {% load img %}
+<!DOCTYPE html>
+<html>
 
 <!--<head> contains metadata for page (style, info, etc.)-->
 <head>
@@ -192,3 +194,4 @@
 
 
 </body>
+</html>
