--- a/projects.html
+++ b/projects.html
@@ -183,8 +183,22 @@
         </h3>
 
         <p style="margin-top: 0;">
-            As part of UB's game development course.  I worked alongside 2 of my classmates to design, develop, and playtest a game in Unreal Engine.  Our game, <a href="https://dbreizor.itch.io/bounce-tower">"Bounce Tower"</a> is a 3D arcade platformer similar to "Doodle Jump".
+            In UB's game development course.  I worked alongside 2 of my classmates to design, develop, and playtest a game in Unreal Engine.  Our game, <a href="https://dbreizor.itch.io/bounce-tower">"Bounce Tower"</a> is a 3D arcade platformer similar to "Doodle Jump".
         </p>
+    </div>
+
+    <div class="project">
+
+        <h3 style="margin-bottom: 0;">
+            Quantum Computing Research
+        </h3>
+
+        <h3 style="margin-bottom: 0; margin-top: 0; font-size: 100%;">
+            (Putnam Valley High School, IBM TJ Watson Research Center)
+        </h3>
+
+        <p style="margin-top: 0;">
+            As part of my high school's science research program, I designed and conducted an independent research project alongside quantum computing researchers at IBM.  My research focused on using microwave circuit models to analyze different types of qubit couplings.  I presented my findings at multiple regional science fair competitions.
     </div>
 
 
