--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
         </h3>
 
         <p style="margin-top: 0;">
-            <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a> is an 8-bit "fantasy console" designed for making small games and other programs in Lua.  I am currently working alongside a friend to develop a game engine within PICO-8 optimized for it's unique software limitations.  So far the engine features an object-oriented heirarchy, hitboxes, basic physics interactions (movement, collision, knockback), dynamic particle system, and AI navigation using A* algorithm.  I look forward to developing a game that takes advantage of all the features in our engine.
+            <a href="https://www.lexaloffle.com/pico-8.php">PICO-8</a> is an 8-bit "fantasy console" designed for making small games and other programs in Lua.  I am currently working alongside a friend to develop a game engine within PICO-8 optimized to get the most out of its limitations.  So far the engine features an object-oriented heirarchy, hitboxes, basic physics interactions (movement, collision, knockback), dynamic particle system, and AI navigation using A* algorithm.  I look forward to developing a game that takes advantage of all the features in our engine.
         </p>
 
     </div>
@@ -89,7 +89,7 @@
         </h3>
 
         <p style="margin-top: 0;">
-            The website you see before you was written by myself.  I am continuously developing new features for the site to hone my front-end and back-end web design skills.
+            The static website you see before you was written by myself.  I am continuously developing new front-end features for the site, and plan to add back-end infrastructure in the future as well.
         </p>
 
     </div>
@@ -168,7 +168,7 @@
         </h3>
 
         <p style="margin-top: 0;">
-            As part of UB's web development course I developed a web application
+            As part of UB's web development course I developed a web application back-end featuring REST API, websocket connections, and database management.
         </p>
     </div>
 
