--- a/projects.html
+++ b/projects.html
@@ -153,8 +153,7 @@
         </h3>
 
         <p style="margin-top: 0;">
-            My coursework in college heavily featured classes on Machine Learning and Reinforcement Learning.  From this, I became familiar with common python frameworks for machine learning.
-        </p>
+            My depth focus in UB's computer science department was in artificial intelligence. As such my coursework heavily featured classes on Machine Learning and Reinforcement Learning.  From this, I became familiar with common python frameworks for machine learning.        </p>
     </div>
 
     <div class="project">
