--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             <li><a href="/projects">Portfolio</a></li>
             <li><a href="/blog">Blog</a></li>
             <li><a href="/gallery">Gallery</a></li>
-            <li style="float:right;" ><a href="/contact">Contact</a></li>
-
+            <li style="float:right;" ><button type="button" id="contactsBtn">Contact</button></li>
         </ul>
 
     </div>
