--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <script>
         var contactsModal = document.getElementById("contactsModal");
         var btn = document.getElementById("contactsBtn");
-        var span = document.getElementByClassName("close-modal")[0];
+        var span = document.getElementsByClassName("close-modal")[0];
 
         btn.onclick = function() {
             contactsModal.style.display = "block";
