--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!--using default style sheet-->
     <link rel="stylesheet" href="/css/default.css">
+    <script src="/js/contacts.js"></script>
 
     <!--<style> contains style specs-->
     <style>
@@ -43,6 +44,7 @@
     </div>
 
     <!--Contacts Modal Script-->
+    <!--
     <script>
         var contactsModal = document.getElementById("contactsModal");
         var btn = document.getElementById("contactsBtn");
@@ -63,6 +65,7 @@
         }
 
     </script>
+    -->
 
 
     <!--Main Content-->
