--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
     <div id="contactsModal" class="modal-background">
         <div class="contact">
             <span class="close-modal">&times;</span>
-            <p>Contact Text...</p>
+            <p>sfrance1218@gmail.com</p>
+            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github">
+            <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt="linkedin">
+
         </div>
 
     </div>
