--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <div class="contact">
             <span class="close-modal">&times;</span>
             <p>sfrance1218@gmail.com</p>
-            <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github">
-            <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt="linkedin">
+            <a href="https://github.com/s-france"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github"> </a>
+            <a href="https://www.linkedin.com/in/sam-france-562772213/"> <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt="linkedin"> </a>
 
         </div>
 
