--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="contactsModal" class="modal-background">
         <div class="contact">
             <span class="close-modal">&times;</span>
-            <p>sfrance1218@gmail.com</p>
+            <p style="color: rgb(40, 40, 136);">sfrance1218@gmail.com</p>
             <a href="https://github.com/s-france"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github"> </a>
             <a href="https://www.linkedin.com/in/sam-france-562772213/"> <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt="linkedin"> </a>
 
