--- a/blog.html
+++ b/blog.html
@@ -9,13 +9,29 @@
     <div class="navbar">
         <ul>
             <li><a href="/">Home</a></li>
-            <li><a href="/projects">Projects</a></li>
+            <li><a href="/projects">Portfolio</a></li>
             <li><a class="active" href="/blog">Blog</a></li>
-            <li style="float:right; padding-right: 5px;" ><a href="/contact">Contact</a></li>
-
+            <li><a href="/gallery">Gallery</a></li>
+            <li style="float:right;" ><button type="button" id="contactsBtn">Contact</button></li>
         </ul>
 
     </div>
+
+    <!--Contact Modal-->
+    <div id="contactsModal" class="modal-background">
+        <div class="contact">
+            <span class="close-modal">&times;</span>
+            <p style="color: rgb(40, 40, 136);">sfrance1218@gmail.com</p>
+            <a href="https://github.com/s-france"> <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="github"> </a>
+            <a href="https://www.linkedin.com/in/sam-france-562772213/"> <img src="https://cdn1.iconfinder.com/data/icons/logotypes/32/circle-linkedin-512.png" alt="linkedin"> </a>
+
+        </div>
+
+    </div>
+
+    <!--Contacts Modal Script-->
+    <script src="/js/contacts.js"></script>
+
 
     <p>blog blog blog </p>
 
