--- a/blog.html
+++ b/blog.html
@@ -33,6 +33,18 @@
     <script src="/js/contacts.js"></script>
 
 
-    <p>blog blog blog </p>
+    <!--Title card-->
+    <div class="title">
+        <!--
+        <h1>
+            <b>Sam France</b>
+        </h1>
+        -->
+
+        <h2>
+            Coming Soon!
+        </h2>
+
+    </div>
 
 </body>
